<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.view.RegistrationActivity">
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAlignment="center"
            android:text="@string/reg_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:inputType="text"
            android:id="@+id/edtCustomerName"
            android:singleLine="true"
            android:hint="@string/reg_name"
            android:text="Shadhin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:id="@+id/edtCustomerEmail"
            android:hint="@string/reg_email"
            android:text="sha@gmail.com"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <TextView
            android:text="@string/reg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <Spinner
            android:id="@+id/spGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/reg_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <Spinner
            android:id="@+id/spStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/reg_submit"
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>

</LinearLayout>