<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.view.HomeActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <Button
            android:layout_margin="20dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:id="@+id/btnRegCustomer"
            android:text="@string/home_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:layout_margin="20dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:id="@+id/btnViewCustomer"
            android:text="@string/home_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>

</LinearLayout>